# Parallel_Image_Processing_Pipeline

./: CMakeLists.txt  README.md
mpi/: CMakeLists.txt  main.cpp
openmp/: CMakeLists.txt  main.cpp
serial/: CMakeLists.txt  main.cpp
